--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoEditor"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <activity
             android:name="com.example.myapplication.MainActivity"
