--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:name="com.example.myapplication.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"></activity>
+
         <activity
             android:name=".FilterActivity"
             android:exported="true"
@@ -47,6 +48,7 @@
             android:exported="true" />
         <activity android:name=".SplineActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             />
         <provider
             android:name="androidx.core.content.FileProvider"
